CONFIGURACIÓN TESTS EN README.md